changement du css des pages de connexions

--- a/pages/en-tete.html
+++ b/pages/en-tete.html
@@ -1,3 +1,4 @@
 <div class="entete">
-    <h1>Banque  d'Images</h1>
+    <img src="../data/logo.png" alt="Logo L'Œil d'Or" class="logo">
+    <h1>L'Oeil d'Or</h1>
 </div>
